# lecturia

./: .gitignore  CLAUDE.md  README.md
api/: .dockerignore  .env.sample  .gcloudignore  Dockerfile  Dockerfile.firebase  README.md  docker-compose.yml  pyproject.toml
api/examples/: generate_audio.py  lecturia_arch_diagram.py  pipeline_test.py  seeder.py
api/firebase/: firebase.json
api/gcloud/: .env.sample  deploy.sh
api/lecturia-public-storage/: README.md
api/lecturia-public-storage/c527e23f-ca9a-4d84-ac83-72b877be5a6b/: events.json
api/lecturia-public-storage/lectures/c527e23f-ca9a-4d84-ac83-72b877be5a6b/: events.json  movie_config.json  result_script.json  result_slide.html
api/src/lecturia/: __init__.py  database.py  db_models.py  firestore.py  lecture_repository.py  media.py  models.py  pipeline.py  router.py  server.py  slide_editor.py  slide_player.py  sprite_sheet.py  storage.py
api/src/lecturia/chains/: event_extractor.py  image_explorer.py  image_generator.py  quiz_generator.py  slide_maker.py  slide_refiner.py  slide_to_script.py  tts.py
api/src/lecturia/cloud_pipeline/: workflow.py
api/src/lecturia/cloud_pipleline/: workflow.py
api/src/lecturia/html/: player.html
api/src/lecturia/local_pipeline/: README.md  pipeline.py  slide_player.py  sprite_sheet.py
api/src/lecturia/utils/: ai_models.py  async_tools.py  intervals.py  media.py
demo/: README.md  package-lock.json  package.json
infra/: .gitignore  README.md  main.tf  provider.tf  secrets.yaml.example  terraform.tfvars  terraform.tfvars.example  variable.tf
web/: .env.sample  (+6 more)
(+37 files in other folders)
